Properly integrated a basic dynamic toolbar.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,28 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <style>
-
-        .link {
-            stroke: #999;
-            stroke-opacity: .6;
-        }
-
-        .node .text {
-            pointer-events: none;
-            font: 10px sans-serif;
-            color: red;
-        }
-
-        .link.active {
-            stroke: red;
-        }
-
-    </style>
     <link rel="stylesheet" href="css/w2ui-1.4.2.min.css" />
+    <link rel="stylesheet" href="css/binder-explorer.css" />
     <script data-main="js/config" src="js/require.js"></script>
 </head>
 <body>
+<div id="toolbar"></div>
 <div id="app"></div>
 </body>
 </html>
