Added a rather nice progress bar through the modelLoader module.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/w2ui-1.4.2.min.css" />
+    <link rel="stylesheet" href="css/nprogress/nprogress.css" />
     <link rel="stylesheet" href="css/binder-explorer.css" />
     <script data-main="js/config" src="js/require.js"></script>
 </head>
