--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,28 @@
     <link rel="stylesheet" href="css/w2ui-1.4.2.min.css" />
     <link rel="stylesheet" href="css/nprogress/nprogress.css" />
     <link rel="stylesheet" href="css/binder-explorer.css" />
+    <style>
+
+        rect {
+            fill: none;
+            pointer-events: all;
+        }
+
+        .node {
+            fill: #000;
+        }
+
+        .cursor {
+            fill: none;
+            stroke: brown;
+            pointer-events: none;
+        }
+
+        .link {
+            stroke: #999;
+        }
+
+    </style>
     <script data-main="js/config" src="js/require.js"></script>
 </head>
 <body>
