Fix the bower.json for release. Require.js is now pulled from bower.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/w2ui-1.4.2.min.css" />
     <link rel="stylesheet" href="css/nprogress/nprogress.css" />
     <link rel="stylesheet" href="css/binder-explorer.css" />
-    <script data-main="js/config" src="js/require.js"></script>
+    <script data-main="js/config" src="js/requirejs-bower/require.js"></script>
 </head>
 <body>
 <div id="toolbar"></div>
