Removed the service list and made the display fit better in the window. The scrollbars are gone.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,7 +23,7 @@
     <script data-main="js/config" src="js/requirejs-bower/require.js"></script>
 </head>
 <body>
-<div id="toolbar"></div>
+<div id="toolbar" style="height: 37px"></div>
 <div id="app"></div>
 </body>
 </html>
