The UI now display a basic dialog containing details about selected services.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/binder-explorer.css" />
     <link rel="stylesheet" href="css/w2ui/w2ui-1.4.2.min.css" />
     <link rel="stylesheet" href="css/nprogress/nprogress.css" />
+    <link rel="stylesheet" href="css/highlightjs/styles/default.css" />
     <script data-main="js/config" src="js/requirejs-bower/require.js"></script>
 </head>
 <body>
