--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,10 +17,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/binder-explorer.css" />
-    <link rel="stylesheet" href="css/w2ui/w2ui-1.4.2.min.css" />
+    <link rel="stylesheet" href="css/w2ui-1.4.3-modified.css" />
     <link rel="stylesheet" href="css/nprogress/nprogress.css" />
     <link rel="stylesheet" href="css/highlightjs/styles/default.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="css/binder-explorer.css" />
+
     <script data-main="js/config" src="js/requirejs-bower/require.js"></script>
 </head>
 <body>
