--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,6 +24,13 @@
     <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
     <link rel="stylesheet" href="css/binder-explorer.css" />
 
+    <!-- Load d3 in advanced because it exports global symbol and
+         d3-tip needs it. This is just a lazy workaround to figuring out
+         how to load d3-tip as an AMD module. -->
+
+    <script src="/app/js/d3/d3.js"></script>
+    <script src="/app/js/d3-tip/d3-tip.js"></script>
+
     <script data-main="js/config" src="js/requirejs-bower/require.js"></script>
 </head>
 <body>
